--- a/AgenciaFiscalPresentacion/src/main/java/com/mycompany/agenciafiscalpresentacion/FormFiltroReporte.form
+++ b/AgenciaFiscalPresentacion/src/main/java/com/mycompany/agenciafiscalpresentacion/FormFiltroReporte.form
@@ -220,6 +220,9 @@
                   <Font name="Comic Sans MS" size="18" style="0"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txfTipoTramiteKeyTyped"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="txfNombre">
               <Properties>
@@ -227,6 +230,9 @@
                   <Font name="Comic Sans MS" size="18" style="0"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txfNombreKeyTyped"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="txtNombre">
               <Properties>
